11 December 2020: Wouter
	- Fix #371: unbound-control timeout when Unbound is not running.
	- Fix to squelch permission denied and other errors from remote host,
	  they are logged at higher verbosity but not on low verbosity.
	- Merge PR #335 from fobser: Sprinkle in some static to prevent
	  missing prototype warnings.
	- Merge PR #373 from fobser: Warning: arithmetic on a pointer to void
	  is a GNU extension.
	- Fix missing prototypes in the code.

3 December 2020: Wouter
	- make depend.
	- iana portlist updated.

2 December 2020: Wouter
	- Fix #360: for the additionally reported TCP Fast Open makes TCP
	  connections fail, in that case we print a hint that this is
	  happening with the error in the logs.
	- Fix #356: deadlock when listening tcp.
	- Fix unbound-dnstap-socket to not use log routine from interrupt
	  handler and not print so frequently when invoked in sequence.
	- Fix on windows to ignore connection failure on UDP, unless verbose.
	- Fix for #283: fix stream reuse and tcp fast open.
	- Fix update, with write event check with streamreuse and fastopen.

1 December 2020: Wouter
	- Fix #358: Squelch udp connect 'no route to host' errors on low
	  verbosity.

30 November 2020: Wouter
	- Fix assertion failure on double callback when iterator loses
	  interest in query at head of line that then has the tcp stream
	  not kept for reuse.
	- tag for the 1.13.0rc4 release.  This also became the 1.13.0
	  release version on 3 dec 2020 with the streamreuse and fastopen
	  fix from 2 dec 2020.  The code repo continues for 1.13.1 in
	  development.

27 November 2020: Wouter
	- Fix compile warning for type cast in http2_submit_dns_response.
	- Fix when use free buffer to initialize rbtree for stream reuse.
	- Fix compile warnings for windows.
	- Fix compile warnings in rpz initialization.
	- Fix contrib/metrics.awk for FreeBSD awk compatibility.
	- tag for the 1.13.0rc3 release.

26 November 2020: Wouter